--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 			</style>
 			<title>{{ page.title }}</title>
 
-			<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Serif+Pro" rel="stylesheet">			
+			<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Serif+Pro" rel="stylesheet">
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<link rel="stylesheet" href="animate.css">
@@ -33,20 +33,20 @@
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+
 			{{ content }}
-			
+
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
 
-				<li><a href="mailto:ppinheirochagas@gmail.com" target="_blank"><i class="fa fa-envelope ai-2x" style="color:#888"></i></a></li>
+				<li><a href="mailto:utooley@gmail.com" target="_blank"><i class="fa fa-envelope ai-2x" style="color:#888"></i></a></li>
 
-				<li><a href="https://scholar.google.com/citations?user=XVsftdsAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar ai-2x" style="color:#888"></i></a></li>
+				<li><a href="https://scholar.google.com/citations?user=OJbNvAQAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar ai-2x" style="color:#888"></i></a></li>
 
-				<li><a href="https://github.com/pinheirochagas" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>				
+				<li><a href="https://github.com/utooley" target="_blank"><i class="fab fa-github ai-2x" style="color:#888"></i></a></li>
 
-				<li><a href="https://twitter.com/ppinheirochagas" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>	
+				<li><a href="https://twitter.com/utooley" target="_blank"><i class="fab fa-twitter ai-2x" style="color:#888"></i></a></li>
 
 
 
