--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 	    		<ul>
 	        		<li><a href="/" class="int">Home</a></li>
 		        	<li><a href="/publications" class="int">Publications</a></li>
-	        		<li><a href="/talks" class="int">Talks</a></li>
+	        		<li><a href="/talks" class="int">Recorded Talks</a></li>
 	        		<li><a href="/outreach" class="int">Outreach</a></li>
 							<li><a href="/cv" class="int">CV</a></li>
 
